kanc/src/tests/sample_code/should_fail/multi_file/bind/use_identifier_as_is/src/nat.k
pub type Nat {
    o: Nat,
    s(n: Nat): Nat,
}

use Nat as Blat;
pub use Blat;
